--- a/view/index.html
+++ b/view/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
 </head>
 <body>
     <header>
@@ -20,20 +21,21 @@
             <h1>Buy cars</h1>
             <h1>Sell cars</h1>
         </section>
-        <main>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos numquam, non possimus ratione illo nulla? Dolorem corporis, eveniet iste possimus accusamus sequi officia, facilis debitis nihil odit, magnam placeat velit!
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos numquam, non possimus ratione illo nulla? Dolorem corporis, eveniet iste possimus accusamus sequi officia, facilis debitis nihil odit, magnam placeat velit!
-            </p>
-            <div>
-                <img src="https://images.unsplash.com/photo-1720048169707-a32d6dfca0b3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="cable usb" srcset="">
-                <img src="https://images.unsplash.com/photo-1734378377292-212b58560ff8?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="white wolf" srcset="">
-                <img src="https://images.unsplash.com/photo-1732647169576-49abfdef3348?q=80&w=1979&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="the house" srcset="">
-            </div>
-        </main>
     </header>
+
+    <main>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos numquam, non possimus ratione illo nulla? Dolorem corporis, eveniet iste possimus accusamus sequi officia, facilis debitis nihil odit, magnam placeat velit!
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos numquam, non possimus ratione illo nulla? Dolorem corporis, eveniet iste possimus accusamus sequi officia, facilis debitis nihil odit, magnam placeat velit!
+        </p>
+        <div>
+            <img src="https://images.unsplash.com/photo-1720048169707-a32d6dfca0b3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="cable usb">
+            <img src="https://images.unsplash.com/photo-1734378377292-212b58560ff8?q=80&w=2127&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="white wolf">
+            <img src="https://images.unsplash.com/photo-1732647169576-49abfdef3348?q=80&w=1979&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="the house">
+        </div>
+    </main>
     
 </body>
 </html>
